# burnrate

./: .flake8  .gitignore  README.md  cleanup.sh  pyproject.toml
src/: .flake8  pyproject.toml
src/burndown/: __main__.py
src/burndown/base/: __init__.py  base.py
src/burndown/entities/: .__init__.py.swp  __init__.py
src/burnrate/: __init__.py  __main__.py
src/burnrate/base/: __init__.py  base.py
src/tests/: test_accounts.py  test_expenses.py  test_month.py  test_year.py
