[tool.poetry]
name = "burnrate"
version = "0.0.2"
description = "Calculate your cash burn rate"
authors = ["Brenden Hyde <brendenahyde@gmail.com>"]
readme = "README.md"
packages = [{include = "burnrate", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-isort = "^6.0.0"
pytest = "^7.2.1"
pandas = "^1.5.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "burnrate"
version = "0.0.1"
authors = [
  { name="Brenden Hyde", email="brendenahyde@gmail.com" },
]
description = "Calculate your cash burn rate"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/bxbrenden/burnrate"
"Bug Tracker" = "https://github.com/bxbrenden/burnrate/issues"
