[tool.poetry]
name = "burndown"
version = "0.1.0"
description = "Calculate your burn rate"
authors = ["Brenden Hyde <brendenahyde@gmail.com>"]
readme = "README.md"
packages = [{include = "burndown"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bugbear = "^23.2.13"
flake8-isort = "^6.0.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
